added navbar and router functionality

--- a/src/styles/themes/_defaultTheme.scss
+++ b/src/styles/themes/_defaultTheme.scss
@@ -1,27 +1,27 @@
 //dark shadees of the primary color
-$clr-primary-0: hsl(210, 60%, 21%);
-$clr-primary-1: hsl(210, 60%, 29%);
-$clr-primary-2: hsl(210, 60%, 37%);
-$clr-primary-3: hsl(210, 60%, 45%);
-$clr-primary-4: hsl(210, 60%, 52%); //primary color
-$clr-primary-5: hsl(210, 60%, 60%);
-$clr-primary-6: hsl(210, 60%, 67%);
-$clr-primary-7: hsl(210, 60%, 74%);
-$clr-primary-8: hsl(210, 60%, 81%);
-$clr-primary-9: hsl(210, 60%, 88%);
+$clr-primary-0: hsl(230, 60%, 21%);
+$clr-primary-1: hsl(230, 60%, 29%);
+$clr-primary-2: hsl(230, 60%, 37%);
+$clr-primary-3: hsl(230, 60%, 45%);
+$clr-primary-4: hsl(230, 60%, 52%); //primary color
+$clr-primary-5: hsl(230, 60%, 60%);
+$clr-primary-6: hsl(230, 60%, 67%);
+$clr-primary-7: hsl(230, 60%, 74%);
+$clr-primary-8: hsl(230, 60%, 81%);
+$clr-primary-9: hsl(230, 60%, 88%);
 //light shades of the primary color
 
 //dark shadees of the seconday color
-$clr-secondary-0: hsl(35, 80%, 21%);
-$clr-secondary-1: hsl(35, 80%, 29%);
-$clr-secondary-2: hsl(35, 80%, 37%);
-$clr-secondary-3: hsl(35, 80%, 45%);
-$clr-secondary-4: hsl(35, 80%, 52%); //seconday color
-$clr-secondary-5: hsl(35, 80%, 60%);
-$clr-secondary-6: hsl(35, 80%, 67%);
-$clr-secondary-7: hsl(35, 80%, 74%);
-$clr-secondary-8: hsl(35, 80%, 81%);
-$clr-secondary-9: hsl(35, 80%, 88%);
+$clr-secondary-0: hsl(45, 80%, 21%);
+$clr-secondary-1: hsl(45, 80%, 29%);
+$clr-secondary-2: hsl(45, 80%, 37%);
+$clr-secondary-3: hsl(45, 80%, 45%);
+$clr-secondary-4: hsl(45, 80%, 52%); //secondary color
+$clr-secondary-5: hsl(45, 80%, 60%);
+$clr-secondary-6: hsl(45, 80%, 67%);
+$clr-secondary-7: hsl(45, 80%, 74%);
+$clr-secondary-8: hsl(45, 80%, 81%);
+$clr-secondary-9: hsl(45, 80%, 88%);
 //light shades of the seconday color
 
 //dark shadees of the grey
