--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -245,219 +245,141 @@ main {
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background: #1e4a76;
-  color: #b1cfec;
+  background: #2e45b8;
+  color: #b1bbec;
   line-height: 1.5;
   font-size: 0.875rem;
 }
 
-.section {
-  width: 90vw;
-  margin: 0 auto;
-  max-width: 1170px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
+.navbar {
+  background: #1e2c76;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
 }
-
-@media only screen and (min-width: 1024px) {
-  .section {
-    width: 95vw;
-  }
-}
-.news {
-  width: 80vw;
-  display: grid;
-  justify-items: center;
-  justify-content: center;
-  gap: 2rem;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-@media only screen and (min-width: 768px) {
-  .news {
-    grid-template-columns: 40vw 40vw;
-  }
-}
-.news-story {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: auto;
-  position: relative;
-  padding: 1rem;
-  background: #fff;
-  border-radius: 0.25rem;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-  margin: 0 1rem;
-}
-.news-story .title {
-  font-size: 1.2rem;
-  font-weight: 500;
-  color: #2e73b8;
-}
-.news-story .info {
-  font-size: 1.1rem;
-  margin-bottom: 2rem;
-  color: #3b85ce;
-}
-.news-story .url {
-  text-decoration: none;
-  color: #5c738a;
-  transition: 0.1s linear all;
-}
-.news-story .url:hover {
-  color: #2c4a68;
-}
-.news-story .button-container {
-  position: absolute;
-  bottom: 5px;
-  width: 100%;
-}
-.news-story .button-container button {
-  margin-left: 40%;
-  color: #ca1616;
-}
-
-@media only screen and (min-width: 768px) {
-  .news-story .button-container button {
-    margin-left: 75%;
-  }
-}
-.search-form {
-  width: 90vw;
-  max-width: 1170px;
-  margin: 0 auto;
-  margin-top: 5rem;
-  margin-bottom: 3rem;
-}
-.search-form .form-input {
-  width: 100%;
-  border: transparent;
-  max-width: 620px;
-  padding: 0.2rem;
-  margin-top: 1rem;
-  font-size: 1rem;
-  border-bottom: 2px solid #222;
-  outline: none;
-  color: #afbdca;
-  letter-spacing: 0.1rem;
-  text-transform: uppercase;
-}
-.search-form .error {
-  color: #ca1616;
-  text-transform: capitalize;
-  padding-top: 0.5rem;
-  letter-spacing: 0.1rem;
-}
-
-.pagination {
-  margin-left: auto;
-  margin-right: auto;
+.navbar .nav-center .nav-header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 15rem;
-  align-items: center;
-  margin-bottom: 1.2rem;
+  padding: 1rem;
 }
-.pagination .arrow {
-  width: 2rem;
-  height: 1.1rem;
-}
-.pagination .arrow:hover {
+.navbar .nav-center .nav-toggle {
+  font-size: 1.5rem;
+  color: #3b54ce;
+  background: transparent;
+  border-color: transparent;
+  transition: all 0.5s linear;
   cursor: pointer;
 }
-.pagination p {
-  margin: 0;
+.navbar .nav-center .nav-toggle:hover {
+  transform: rotate(90deg);
 }
-.pagination .pages {
-  width: 8rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+.navbar .nav-center .logo {
+  height: 30px;
 }
-.pagination .pages input {
-  width: 1.5rem;
-  text-align: center;
-  outline: none;
-  border-bottom: 1px #b1cfec solid;
-  margin: 0 1rem;
-  color: #b1cfec;
+.navbar .nav-center .links-container {
+  height: 0;
+  overflow: hidden;
 }
-.pagination:last-of-type {
-  margin-top: 1.2rem;
+.navbar .nav-center .links-container.show {
+  height: auto;
+}
+.navbar .nav-center .links li, .navbar .nav-center .links li a:visited {
+  color: #7889dd;
+  font-size: 1rem;
+  text-transform: capitalize;
+  letter-spacing: 0.1rem;
+  display: block;
+  padding: 0.5rem 1rem;
+  transition: all 0.5s linear;
+  position: relative;
+}
+.navbar .nav-center .links li:hover, .navbar .nav-center .links li a:visited:hover {
+  background: #b1bbec;
+  color: #3b54ce;
+  padding-left: 1.5rem;
+}
+.navbar .nav-center .links li:hover:after, .navbar .nav-center .links li a:visited:hover:after {
+  opacity: 1;
+}
+.navbar .nav-center .links li::after, .navbar .nav-center .links li a:visited::after {
+  content: "";
+  display: block;
+  positoin: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 0.25rem;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  opacity: 0;
+  background: #3b54ce;
+  transition: 0.3s all ease-out;
 }
 
-.spinner h3 {
-  margin-top: 2rem;
-  text-align: center;
+@media only screen and (min-width: 768px) {
+  .navbar .nav-center {
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+  }
+  .navbar .nav-center .logo {
+    height: 40px;
+  }
+  .navbar .nav-center .nav-header {
+    padding: 0;
+  }
+  .navbar .nav-center .nav-toggle {
+    display: none;
+  }
+  .navbar .nav-center .links-container {
+    height: auto;
+  }
+  .navbar .nav-center .links {
+    display: flex;
+    gap: 3rem;
+  }
+  .navbar .nav-center .links li {
+    padding: 0;
+    margin: 0 0.5rem;
+  }
+  .navbar .nav-center .links li:hover {
+    padding: 0;
+    background: transparent;
+  }
 }
-.spinner div {
-  width: 20rem;
-  height: 20rem;
+.settings {
+  margin-top: 1rem;
+  width: 100%;
+}
+.settings .title {
+  text-align: center;
+  font-weight: bold;
+}
+.settings .settings-form {
+  width: 50%;
   margin-left: auto;
   margin-right: auto;
-  border-radius: 50%;
-  border-top: 2px solid #265e97;
-  animation: spinning 2s linear infinite;
+  display: flex;
+  flex-direction: column;
+  background-color: #b1bbec;
 }
-
-@keyframes spinning {
-  0% {
-    transform: rotate(0deg);
-  }
-  50% {
-    transform: rotate(180deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
+.settings .settings-form .setting {
+  display: flex;
+  gap: 10px;
 }
-.single-movie {
-  width: 90vw;
-  max-width: 1170px;
-  min-height: 100vh;
-  display: grid;
-  align-items: center;
-  margin: 0 auto;
-  gap: 2rem;
-}
-.single-movie img {
-  width: 350px;
-  margin: 0 auto;
-  display: block;
-}
-.single-movie p {
+.settings .settings-form .setting label {
+  color: #222;
   font-size: 1.2rem;
-  margin-top: 1.5rem;
-  line-height: 1.8;
+  align-self: center;
+  font-weight: 600;
 }
-.single-movie .btn {
-  text-transform: capitalize;
-  padding: 0.25rem 0.5rem;
-  background: #5c99d6;
-  color: #fff;
-  border-radius: 0.25rem;
-  display: inline-block;
-  margin-top: 0.5rem;
-  letter-spacing: 0.1rem;
+.settings .settings-form .setting input, .settings .settings-form .setting select {
+  outline: none;
+  height: auto;
   width: auto;
-}
-
-.page-error {
-  min-height: 100vh;
-  display: grid;
-  align-items: center;
-  margin: 0 auto;
-  text-align: center;
-  padding: 2rem;
-}
-
-@media only screen and (min-width: 1024px) {
-  .single-movie {
-    grid-template-columns: 1fr 2fr;
-  }
+  font-size: 1.2rem;
 }/*# sourceMappingURL=main.css.map */
