--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -351,6 +351,21 @@ body {
     background: transparent;
   }
 }
+.single-question {
+  background-color: #1e2c76;
+  padding: 1rem;
+  margin-bottom: 2rem;
+  border-radius: 0.25rem;
+}
+.single-question .question {
+  font-size: 1.2rem;
+  color: #ebc247;
+}
+.single-question .answer {
+  font-size: 1rem;
+  color: #f2d788;
+}
+
 .settings {
   margin-top: 1rem;
   width: 100%;
@@ -382,4 +397,16 @@ body {
   height: auto;
   width: auto;
   font-size: 1.2rem;
+}
+
+.home {
+  margin-top: 1rem;
+}
+.home h2 {
+  text-align: center;
+}
+.home .questions {
+  width: 75vw;
+  margin-left: auto;
+  margin-right: auto;
 }/*# sourceMappingURL=main.css.map */
