--- a/src/styles/pages/_settings.scss
+++ b/src/styles/pages/_settings.scss
@@ -10,13 +10,14 @@
     font-weight: bold;
   }
   .settings-form {
-    width: 50%;
     @include center-auto;
+    padding: 0.5rem 1rem;
+    width: 70%;
     display: flex;
     flex-direction: column;
     background-color: $clr-primary-8;
-
     .setting {
+      margin-top: 0.5rem;
       display: flex;
       gap: 10px;
       label {
@@ -24,12 +25,32 @@
         font-size: 1.2rem;
         align-self: center;
         font-weight: 600;
+        &.amount-label{
+          width: 17rem;
+        }
       }
-      input, select {
+      input,
+      select {
         outline: none;
         height: auto;
-        width: auto;
-        font-size: 1.2rem
+        width: 100%;
+        font-size: 1.2rem;
+        padding: 2px 5px;
+      }
+    }
+    .button-container {
+      @include center-auto;
+      button {
+        width: 7.5rem;
+        height: 2.5rem;
+        background: $clr-secondary-5;
+        border-radius: $radius;
+        border: 1px solid $clr-secondary-3;
+        color: $clr-white;
+        &:hover{
+          background: $clr-secondary-3;
+          border: 1px solid $clr-secondary-2;
+        }
       }
     }
   }
