started work on including authentication token

--- a/src/styles/components/_singleQuestion.scss
+++ b/src/styles/components/_singleQuestion.scss
@@ -18,6 +18,11 @@
     color: $clr-secondary-5;
     @include flex-center;
     flex-direction: column-reverse;
+    .question-text{
+      @include flex-between;
+      width: 100%;
+      font-size: 1.5rem;
+    }
     .cross{
       color: red;
     }
