--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -12,14 +12,11 @@
     }
     .nav-toggle {
       font-size: 1.5rem;
-      color: $clr-primary-4;
+      color: $clr-secondary-4;
       background: transparent;
       border-color: transparent;
       transition: $transition;
       cursor: pointer;
-      &:hover {
-        transform: rotate(90deg);
-      }
     }
 
     .logo {
@@ -33,7 +30,7 @@
       }
     }
     .links li, .links li a:visited {
-      color: $clr-primary-6;
+      color: $clr-secondary-6;
       font-size: 1rem;
       text-transform: capitalize;
       letter-spacing: $spacing;
@@ -43,12 +40,9 @@
       position: relative;
       &:hover {
         background: $clr-primary-8;
-        color: $clr-primary-4;
+        color: $clr-secondary-3;
         padding-left: 1.5rem;
-        &:after{
-          // width: 100%;
-          opacity: 1;
-        } 
+        background: rgba(0, 0, 0, 0.2)
       }
       &::after{
         @include pseudo;
@@ -58,7 +52,7 @@
         width: 100%;
         height: 2px;
         opacity: 0;
-        background: $clr-primary-4;
+        background: $clr-secondary-3;
         transition: 0.3s all ease-out;
       }
     }
@@ -91,9 +85,14 @@
         li {
           padding: 0;
           margin: 0 0.5rem;
+          border-radius: 50%;
+          width: 4rem;
+          height: 1.5rem;
+          text-align: center;
+          line-height: 1.5rem;
           &:hover {
             padding: 0;
-            background: transparent;
+            background: rgba(0, 0, 0, 0.2);
           }
         }
       }
