--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400&display=swap");
 *,
 *::after,
 *::before {
@@ -245,14 +247,14 @@ main {
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background: #2e45b8;
-  color: #b1bbec;
+  background: #552aac;
+  color: #c5b1ec;
   line-height: 1.5;
   font-size: 0.875rem;
 }
 
 .navbar {
-  background: #1e2c76;
+  background: #3b1e76;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
 }
 .navbar .nav-center .nav-header {
@@ -263,14 +265,11 @@ body {
 }
 .navbar .nav-center .nav-toggle {
   font-size: 1.5rem;
-  color: #3b54ce;
+  color: #f3bc16;
   background: transparent;
   border-color: transparent;
   transition: all 0.5s linear;
   cursor: pointer;
-}
-.navbar .nav-center .nav-toggle:hover {
-  transform: rotate(90deg);
 }
 .navbar .nav-center .logo {
   height: 30px;
@@ -283,7 +282,7 @@ body {
   height: auto;
 }
 .navbar .nav-center .links li, .navbar .nav-center .links li a:visited {
-  color: #7889dd;
+  color: #f7d15f;
   font-size: 1rem;
   text-transform: capitalize;
   letter-spacing: 0.1rem;
@@ -293,12 +292,10 @@ body {
   position: relative;
 }
 .navbar .nav-center .links li:hover, .navbar .nav-center .links li a:visited:hover {
-  background: #b1bbec;
-  color: #3b54ce;
+  background: #c5b1ec;
+  color: #daa60b;
   padding-left: 1.5rem;
-}
-.navbar .nav-center .links li:hover:after, .navbar .nav-center .links li a:visited:hover:after {
-  opacity: 1;
+  background: rgba(0, 0, 0, 0.2);
 }
 .navbar .nav-center .links li::after, .navbar .nav-center .links li a:visited::after {
   content: "";
@@ -312,7 +309,7 @@ body {
   width: 100%;
   height: 2px;
   opacity: 0;
-  background: #3b54ce;
+  background: #daa60b;
   transition: 0.3s all ease-out;
 }
 
@@ -345,27 +342,33 @@ body {
   .navbar .nav-center .links li {
     padding: 0;
     margin: 0 0.5rem;
+    border-radius: 50%;
+    width: 4rem;
+    height: 1.5rem;
+    text-align: center;
+    line-height: 1.5rem;
   }
   .navbar .nav-center .links li:hover {
     padding: 0;
-    background: transparent;
+    background: rgba(0, 0, 0, 0.2);
   }
 }
 .single-question {
-  background-color: #1e2c76;
+  background-color: #3b1e76;
   padding: 1rem;
   margin-bottom: 2rem;
   border-radius: 0.25rem;
 }
 .single-question.correct {
-  border: 2px solid green;
+  border: 2px solid #16ca25;
 }
 .single-question.wrong {
-  border: 2px solid red;
+  border: 2px solid #ca1616;
 }
 .single-question .question {
   font-size: 1.2rem;
-  color: #ebc247;
+  font-family: "Gemunu Libre", sans-serif;
+  color: #f3bc16;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -379,10 +382,10 @@ body {
   font-size: 1.5rem;
 }
 .single-question .question .cross {
-  color: red;
+  color: #ca1616;
 }
 .single-question .question .check {
-  color: green;
+  color: #16ca25;
 }
 .single-question .question svg {
   margin-bottom: 10px;
@@ -392,19 +395,20 @@ body {
   border-radius: 0.25rem;
   width: 100%;
   font-size: 1rem;
-  color: #f2d788;
+  color: #f7d15f;
+  font-family: "Open Sans", sans-serif;
   transition: all 0.2s ease-in;
   cursor: pointer;
 }
 .single-question .answer:hover {
-  background: #152056;
-  color: #ebc247;
+  background: #2b1556;
+  color: #f5c73d;
 }
 .single-question .answer.revealed {
-  color: red;
+  color: #ca1616;
 }
 .single-question .answer.revealed.correct-answer {
-  color: green;
+  color: #16ca25;
 }
 
 .spinner {
@@ -413,7 +417,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   border: 3.5px solid #c5cfd8;
-  border-top-color: #cfa117;
+  border-top-color: #daa60b;
   border-radius: 50%;
   -webkit-animation: spinner 1s linear infinite;
           animation: spinner 1s linear infinite;
@@ -422,21 +426,21 @@ body {
 @-webkit-keyframes spinner {
   50% {
     transform: rotate(180deg);
-    border-top-color: #e7b623;
+    border-top-color: #f3bc16;
   }
   100% {
     transform: rotate(360deg);
-    border-top-color: #cfa117;
+    border-top-color: #daa60b;
   }
 }
 @keyframes spinner {
   50% {
     transform: rotate(180deg);
-    border-top-color: #e7b623;
+    border-top-color: #f3bc16;
   }
   100% {
     transform: rotate(360deg);
-    border-top-color: #cfa117;
+    border-top-color: #daa60b;
   }
 }
 
@@ -444,6 +448,24 @@ body {
   font-size: 1.6rem;
   font-weight: bold;
   text-align: center;
+}
+.error .button-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.error .button-container .refresh {
+  width: 20rem;
+  height: 3rem;
+  background: #3b1e76;
+  color: #f7d15f;
+  border-radius: 0.25rem;
+  margin-bottom: 2rem;
+  transition: all 0.5s linear;
+}
+.error .button-container .refresh:hover {
+  background: #2b1556;
+  color: #f3bc16;
 }
 
 .settings {
@@ -461,7 +483,7 @@ body {
   width: 70%;
   display: flex;
   flex-direction: column;
-  background-color: #b1bbec;
+  background-color: #c5b1ec;
 }
 .settings .settings-form .setting {
   margin-top: 0.5rem;
@@ -492,14 +514,14 @@ body {
 .settings .settings-form .button-container button {
   width: 7.5rem;
   height: 2.5rem;
-  background: #ebc247;
+  background: #f5c73d;
   border-radius: 0.25rem;
-  border: 1px solid #cfa117;
+  border: 1px solid #daa60b;
   color: #fff;
 }
 .settings .settings-form .button-container button:hover {
-  background: #cfa117;
-  border: 1px solid #aa8413;
+  background: #daa60b;
+  border: 1px solid #b38909;
 }
 
 .home {
@@ -522,12 +544,13 @@ body {
 .home .button-container .refresh {
   width: 20rem;
   height: 3rem;
-  background: #1e2c76;
-  color: #eecd68;
+  background: #3b1e76;
+  color: #f7d15f;
   border-radius: 0.25rem;
   margin-bottom: 2rem;
+  transition: all 0.5s linear;
 }
 .home .button-container .refresh:hover {
-  background: #152056;
-  color: #cfa117;
+  background: #2b1556;
+  color: #f3bc16;
 }/*# sourceMappingURL=main.css.map */
