--- a/src/styles/themes/_defaultTheme.scss
+++ b/src/styles/themes/_defaultTheme.scss
@@ -1,27 +1,34 @@
+//fonts
+@import url('https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400&display=swap');
+
+$question-font: 'Gemunu Libre', sans-serif;
+$answer-font: 'Open Sans', sans-serif;
+
 //dark shadees of the primary color
-$clr-primary-0: hsl(230, 60%, 21%);
-$clr-primary-1: hsl(230, 60%, 29%);
-$clr-primary-2: hsl(230, 60%, 37%);
-$clr-primary-3: hsl(230, 60%, 45%);
-$clr-primary-4: hsl(230, 60%, 52%); //primary color
-$clr-primary-5: hsl(230, 60%, 60%);
-$clr-primary-6: hsl(230, 60%, 67%);
-$clr-primary-7: hsl(230, 60%, 74%);
-$clr-primary-8: hsl(230, 60%, 81%);
-$clr-primary-9: hsl(230, 60%, 88%);
+$clr-primary-0: hsl(260, 60%, 21%);
+$clr-primary-1: hsl(260, 60%, 29%);
+$clr-primary-2: hsl(260, 60%, 37%);
+$clr-primary-3: hsl(260, 61%, 42%);
+$clr-primary-4: hsl(260, 60%, 52%); //primary color
+$clr-primary-5: hsl(260, 60%, 60%);
+$clr-primary-6: hsl(260, 60%, 67%);
+$clr-primary-7: hsl(260, 60%, 74%);
+$clr-primary-8: hsl(260, 60%, 81%);
+$clr-primary-9: hsl(260, 60%, 88%);
 //light shades of the primary color
 
 //dark shadees of the seconday color
-$clr-secondary-0: hsl(45, 80%, 21%);
-$clr-secondary-1: hsl(45, 80%, 29%);
-$clr-secondary-2: hsl(45, 80%, 37%);
-$clr-secondary-3: hsl(45, 80%, 45%);
-$clr-secondary-4: hsl(45, 80%, 52%); //secondary color
-$clr-secondary-5: hsl(45, 80%, 60%);
-$clr-secondary-6: hsl(45, 80%, 67%);
-$clr-secondary-7: hsl(45, 80%, 74%);
-$clr-secondary-8: hsl(45, 80%, 81%);
-$clr-secondary-9: hsl(45, 80%, 88%);
+$clr-secondary-0: hsl(45, 90%, 21%);
+$clr-secondary-1: hsl(45, 90%, 29%);
+$clr-secondary-2: hsl(45, 90%, 37%);
+$clr-secondary-3: hsl(45, 90%, 45%);
+$clr-secondary-4: hsl(45, 90%, 52%); //secondary color
+$clr-secondary-5: hsl(45, 90%, 60%);
+$clr-secondary-6: hsl(45, 90%, 67%);
+$clr-secondary-7: hsl(45, 90%, 74%);
+$clr-secondary-8: hsl(45, 90%, 81%);
+$clr-secondary-9: hsl(45, 90%, 88%);
 //light shades of the seconday color
 
 //dark shadees of the grey
