--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -29,20 +29,22 @@
         height: auto;
       }
     }
-    .links li, .links li a:visited {
-      color: $clr-secondary-6;
-      font-size: 1rem;
-      text-transform: capitalize;
-      letter-spacing: $spacing;
+    .links li{
       display: block;
       padding: 0.5rem 1rem;
       transition: $transition;
       position: relative;
+      a, a:visited{
+        color: $clr-secondary-6;
+        font-size: 1rem;
+        text-transform: capitalize;
+        letter-spacing: $spacing;
+      }
       &:hover {
         background: $clr-primary-8;
         color: $clr-secondary-3;
         padding-left: 1.5rem;
-        background: rgba(0, 0, 0, 0.2)
+        background: rgba(0, 0, 0, 0.4)
       }
       &::after{
         @include pseudo;
